# YT-downloader

./: Cargo.toml  README.md
src/: app.rs  helpers.rs  main.rs  url.rs
src/helpers/: banner.rs  clean_up.rs  dir_checks.rs  errortext.rs  fetch.rs  formats.rs  loadimg.rs  parse_strings.rs  path_creation.rs  user_input.rs
windows_release/: README.md
