[package]
name = "yt_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json","stream"] }
tokio = { version = "1", features = ["full"] }
requestty = "0.5.0"
project-root = "0.2.2"
loading = "0.3.0"
tokio-stream = "0.1.9"
colored = "2"
strum = "0.24"
strum_macros = "0.24"
[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]