[package]
name = "yt_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json","stream"] }
tokio = { version = "1", features = ["full"] }
project-root = "0.2.2"
tokio-stream = "0.1.9"
strum = "0.24"
strum_macros = "0.24"
egui = "0.19.0"
eframe = "0.19.0"
image = "0.24.2"
[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
